--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,3 +7,4 @@ nav:
   - Home: index.md
   - Complexity and Computability Theory:
       - Deterministic Space Hierarchy Theorem: complexity_and_computability_theory/space_hierarchy.md
+      - Deterministic Time Hierarchy Theorem: complexity_and_computability_theory/time_hierarchy.md
