--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ theme:
   name: material
 
 nav:
-  - About Me: about_me.md
+  - About Me: https://arafat04.github.io/
   - Home: index.md
   - Complexity and Computability Theory:
       - Deterministic Space Hierarchy Theorem: complexity_and_computability_theory/space_hierarchy.md
