--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ nav:
   - About Me: https://arafat04.github.io/
   - Home: index.md
   - Machine Learning:
-      - 12. Statistical Hypothesis Testing, Model Comparison: 12. Statistical Hypothesis Testing, Model Comparison/index.md
+      - 12. Statistical Hypothesis Testing, Model Comparison: 12-statistical-hypothesis-testing-model-comparison/index.md
   - Complexity and Computability Theory:
       - Deterministic Space Hierarchy Theorem: complexity_and_computability_theory/space_hierarchy.md
       - Deterministic Time Hierarchy Theorem: complexity_and_computability_theory/time_hierarchy.md
