--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
   - About Me: https://arafat04.github.io/
   - Home: index.md
   - Machine Learning:
+      - 1.Introduction to Machine Learning: 1_introduction_to_machine_learning/qnas.md
       - 12.Statistical Hypothesis Testing, Model Comparison: 12-statistical-hypothesis-testing-model-comparison/questions_answers.md
   - Complexity and Computability Theory:
       - Deterministic Space Hierarchy Theorem: complexity_and_computability_theory/space_hierarchy.md
