--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,8 @@ nav:
   - Machine Learning:
       - 1.Introduction to Machine Learning: machine_learning/1_introduction_to_machine_learning/qnas.md
       - 12.Statistical Hypothesis Testing, Model Comparison: machine_learning/12-statistical-hypothesis-testing-model-comparison/questions_answers.md
+  - Deep Learning:
+      - 1. Introduction to Deep Learning: deep_learning/1. introduction_to_deep_learning/slope_curve.md
   - Complexity and Computability Theory:
       - Deterministic Space Hierarchy Theorem: complexity_and_computability_theory/space_hierarchy.md
       - Deterministic Time Hierarchy Theorem: complexity_and_computability_theory/time_hierarchy.md
